--- a/package.json
+++ b/package.json
@@ -1,80 +1,83 @@
 {
-  "name": "mdb4-boilerplate",
-  "version": "2.0.0",
-  "description": "A complete Webpack boilerplate for Material Design for Bootstrap",
-  "main": "src/js/app.js",
+  "name": "mdb-boilerplate",
+  "version": "3.0.0",
+  "description": "A complete production ready boilerplate for MDBootstrap and webpack",
+  "main": "./src/app.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --progress --colors --hot --open --inline --compress"
+    "start": "webpack-dev-server --mode development --progress --color",
+    "build": "webpack --mode production"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SpellCraft/mdb4-boilerplate.git"
-  },
+  "keywords": [
+    "mdb free",
+    "mdb pro",
+    "webpack 4",
+    "webpack",
+    "boilerplate",
+    "mdb boilerplate",
+    "material design",
+    "jquery",
+    "bootstrap"
+  ],
   "author": {
-    "name": "Arnt Oddvar Pedersen",
-    "email": "arnt.o.pedersen@gmail.com",
-    "url": "http://www.vext.no/co-workere/"
+    "name": "Arnt Pedersen",
+    "email": "arnt@gomap.no",
+    "url": "https://www.google.com"
   },
+  "private": false,
+  "maintainers": [
+    "Arnt Pedersen"
+  ],
   "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/SpellCraft/mdb4-boilerplate/issues"
-  },
-  "homepage": "https://github.com/SpellCraft/mdb4-boilerplate#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.4.4",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.3.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-airbnb": "^3.2.1",
+    "clean-webpack-plugin": "^2.0.2",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.2",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "terser": "^3.14.0-beta",
-    "terser-webpack-plugin": "^1.2.1",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "terser-webpack-plugin": "^1.2.4",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
-    "bootstrap": "^4.2.1",
-    "datatables.net": "^1.10.19",
-    "es6-promise": "^4.2.5",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
-    "node-waves": "^0.7.6",
-    "popper.js": "^1.14.6",
-    "underscore": "^1.9.1",
-    "wow.js": "^1.2.2"
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "airbnb-browser-shims": "^3.2.1",
+    "bootstrap": "^4.3.1",
+    "datatables.net-bs4": "^1.10.19",
+    "jquery": "^3.4.1",
+    "mdbootstrap": "^4.7.7",
+    "popper.js": "^1.15.0"
   }
 }
